# anti-spam

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  OAUTH_SCOPE_FIX_DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f3d0c2b4b8e_add_body_text_to_email_scans.py  91bb03064d41_add_deleted_at_to_deletion_requests_for_.py  asow3ktmv44e_add_gemini_api_key_columns.py  c8ada720b72d_force_oauth_reauth_for_scope_fix.py  e85755999482_add_email_scan_thread_support_and_auto_.py
backend/app/: celery_app.py  config.py  database.py  exceptions.py  main.py
backend/app/api/: activities.py  admin.py  ai.py  analytics.py  auth.py  brokers.py  emails.py  requests.py  responses.py  tasks.py
backend/app/models/: __init__.py  activity_log.py  broker_response.py  deletion_request.py  email_scan.py  user.py
backend/app/schemas/: ai.py  broker.py  email.py  request.py  response.py  user.py
backend/app/services/: activity_log_service.py  ai_settings.py  analytics_service.py  broker_detector.py  broker_service.py  deletion_request_service.py  email_scanner.py  gemini_service.py  gmail_service.py  rate_limiter.py  response_detector.py  response_matcher.py
backend/app/tasks/: email_tasks.py
backend/app/utils/: email_templates.py
backend/data/: data_brokers.json
backend/migrations/: 003_add_broker_responses.sql  README.md  run_migrations.py
backend/tests/: conftest.py  test_activity_log_service.py  test_analytics_service.py  test_broker_detector.py  test_brokers.py  test_deletion_request_service.py  test_email_scanner.py  test_email_templates.py  test_gemini_service.py  test_gmail_service.py  test_rate_limiter.py  test_requests.py  test_response_matcher.py  test_services.py
demo/: README.md  demo-script.sh  demo.cast
docs/: EMAIL_CLASSIFICATION_IMPROVEMENTS_PLAN.md  ENHANCED_EMAIL_SCANNING_PLAN.md  TEST_COVERAGE_PLAN.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/coverage/: coverage-final.json  index.html
frontend/public/: llms.txt  robots.txt  sitemap.xml
scripts/: setup.ps1  setup.sh
(+55 files in other folders)
