[project]
name = "data-deletion-assistant"
version = "1.0.0"
description = "Automate GDPR/CCPA data deletion requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.1.0",
    "google-auth-oauthlib==1.1.0",
    "google-api-python-client==2.108.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "cryptography==41.0.7",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "celery==5.3.4",
    "redis==5.0.1",
    "PyJWT==2.8.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    "ruff==0.1.9",
    "mypy==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # exception chaining (requires manual fix, not critical)
]

[tool.ruff.lint.per-file-ignores]
# These files set env vars before importing app modules (intentional)
"app/services/gmail_service.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Relaxed settings for existing codebase - tighten over time
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
